[package]
name = "mappi"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[features]
dynamic_linking = ["bevy/dynamic_linking"]
debug = ["bevy/detailed_trace"]

[dependencies]
bevy = "0.10.1"
bevy_ecs_tilemap = "0.10.0"
dirs = "5.0.0"
time = { version = "0.3.20", features = ["local-offset"] }
tracing-error = "0.2.0"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
